--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 <h4> Linkdln Clone</h4>
                 <p>Linkdln Clone</p>
                 <a href="assets/img/logoproducts/linkdln logo.png" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://sharon812.github.io/Linkdein-Clone/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
